fix z-index

--- a/css/heatweb.css
+++ b/css/heatweb.css
@@ -392,6 +392,7 @@ body {
 		box-shadow: -10px 0 30px rgba(0, 0, 0, .2);
 		opacity: 0;
 		z-index: 10;
+		pointer-events: none;
 	}
 
 .inner-faqs {
